--- a/app.html
+++ b/app.html
@@ -17,7 +17,7 @@
   <script>
     // 将echarts和div关联
     var myChart = echarts.init(document.querySelector('#container'))
-    fetch('http://127.0.0.1:8080/api/data')
+    fetch('http://127.0.0.1:3000/api/data')
       .then(res => res.json()) //把可读数据流转换为json格式
       .then(res => {
         console.log(res);//读取到疫情数据
@@ -26,7 +26,7 @@
         getListByCountryTypeService1.forEach(item => {
           filterData.push({
             name: item.provinceShortName,
-            value: item.confirmeCount,
+            value: item.confirmedCount,
             deadCount: item.deadCount,
             curedCount: item.curedCount
           })
@@ -40,11 +40,28 @@
             left: 'center',
           },
           backgroundColor: '#f7f7f7',
-          tooltip:{ //提示框内容
-            formatter:function(params){
-              return `地区:${params.name}<br/>确诊:${params.value || 0}<br/>治愈:${params.data && params.data.curedCount || 0}<br/>死亡:${params.data ?. params.data.deadCount || 0}`
+          visualMap: {
+            type: 'piecewise',  //piecewise分段  continuous连续的
+            pieces: [
+              { gt: 1500 },            // (1500, Infinity]
+              { gt: 1000, lte: 1499 },  // (1000, 1500]
+              { gt: 500, lte: 999 },  // (500, 999]
+              { gt: 100, lte: 499 },   // (100, 499]
+              { gt: 10, lte: 99 },
+              // { gt: 10, lte: 200, label: '10 到 200（自定义label）' },       // (10, 200]
+              // { value: 123, label: '123（自定义特殊颜色）', color: 'grey' },  // [123, 123]
+              { gt: 0, lte: 9 },                 // (1, 9]
+            ]
+          },
+          tooltip: { //提示框内容
+            formatter: function (params) {
+              // console.log(params, 'formatter');
+              return `地区:${params.name}<br/>确诊:${params.value || 0}<br/>治愈:${params.data && params.data.curedCount || 0}<br/>死亡:${params.data && params.data.deadCount || 0}`
             }
           },
+          // timeline:{
+          //   data: ['2002-01-01']
+          // },
           series: [
             {
               type: 'map', // 当前图表类型
@@ -52,7 +69,7 @@
               label: {//覆盖物设置
                 show: true,
               },
-              data:filterData,
+              data: filterData,
             }
           ]
         })
